<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- appsuite-jdk -->
    <groupId>com.devamatre.appsuite</groupId>
    <artifactId>appsuite-jdk</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>
    <name>${project.artifactId}</name>
    <description>The ${project.artifactId} Application</description>

    <!-- Properties -->
    <properties>
        <!-- revision -->
        <revision>0.0.0</revision>

        <!-- sourceEncoding &  outputEncoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- java version -->
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- maven plugins -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>

        <!-- checkstyle -->
        <code-styles.dir>https://raw.githubusercontent.com/rslakra/code-styles/master</code-styles.dir>
        <checkstyle.threshold>0</checkstyle.threshold>

        <!-- appsuite-core -->
        <appsuite-core.version>0.0.4</appsuite-core.version>
        <appsuite-http-client.version>0.0.2</appsuite-http-client.version>

        <!-- logging -->
        <slf4j-api.version>2.0.6</slf4j-api.version>

        <!-- lombok -->
        <lombok.version>1.18.28</lombok.version>

        <!--        &lt;!&ndash; json &ndash;&gt;-->
        <!--        <nimbus-jose-jwt.version>9.25.6</nimbus-jose-jwt.version>-->
        <!--        <jose4j.version>0.9.2</jose4j.version>-->
        <!--        <gson.version>2.10</gson.version>-->

        <!--        &lt;!&ndash; jackson &ndash;&gt;-->
        <!--        <jackson-databind.version>2.14.1</jackson-databind.version>-->
        <!--        <jackson-core.version>2.14.1</jackson-core.version>-->

        <!-- bouncy castle -->
        <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>

        <!-- apache commons -->
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-collections.version>4.4</commons-collections.version>
        <commons-beans.version>1.9.4</commons-beans.version>
        <commons-text.version>1.10.0</commons-text.version>

        <!-- guava -->
        <guava.version>32.1.2-jre</guava.version>

        <!-- swagger -->
        <swagger.skip>false</swagger.skip>

        <!-- junit-jupiter-params -->
        <junit-jupiter-params.version>5.9.2</junit-jupiter-params.version>
        <surefire-junit3.version>2.12.4</surefire-junit3.version>
        <!-- junit -->
        <junit.version>4.13.2</junit.version>
        <!-- testng -->
        <testng.version>7.7.1</testng.version>

    </properties>

    <!-- Dependencies -->
    <dependencies>

        <!--appsuite-core-->
        <dependency>
            <groupId>com.devamatre.appsuite</groupId>
            <artifactId>appsuite-core</artifactId>
            <version>${appsuite-core.version}</version>
        </dependency>

        <dependency>
            <groupId>com.devamatre.appsuite</groupId>
            <artifactId>appsuite-http-client</artifactId>
            <version>${appsuite-http-client.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${bcprov-jdk15on.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beans.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter-params.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- profiles -->
    <profiles>

        <!-- snapshot -->
        <profile>
            <id>snapshot-repository</id>
            <activation>
                <property>
                    <name>snapshot</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <buildVersion>${project.version}-SNAPSHOT</buildVersion>
            </properties>
        </profile>

        <!-- release -->
        <profile>
            <id>release-repository</id>
            <activation>
                <property>
                    <name>!snapshot</name>
                </property>
            </activation>
            <properties>
                <buildVersion>${project.version</buildVersion>
            </properties>
        </profile>

    </profiles>

    <!-- Build -->
    <build>
        <!-- plugins -->
        <plugins>

            <!-- Note:- Don't uncomment this plug-in for the common packages -->
            <!-- frameworks-boot-maven-plugin -->
            <!--            <plugin>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
            <!--            </plugin>-->

            <!-- maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- maven-checkstyle-plugin -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
<!--                <version>${maven-checkstyle-plugin.version}</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>default</id>-->
<!--                        <phase>process-classes</phase>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <configLocation>${code-styles.dir}/styles.xml</configLocation>-->
<!--                            <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>-->
<!--                            <logViolationsToConsole>true</logViolationsToConsole>-->
<!--                            <maxAllowedViolations>${checkstyle.threshold}</maxAllowedViolations>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

            <!-- maven-release-plugin -->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-release-plugin</artifactId>-->
            <!--                <version>${maven-release-plugin.version}</version>-->
            <!--                <configuration>-->
            <!--                    <tagNameFormat>${project.version}</tagNameFormat>-->
            <!--                    <checkModificationExcludes>-->
            <!--                        <checkModificationExclude>pom.xml</checkModificationExclude>-->
            <!--                    </checkModificationExcludes>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

        </plugins>

    </build>

    <!-- reporting -->
    <reporting>
        <!-- plugins -->
<!--        <plugins>-->
<!--            &lt;!&ndash; maven-checkstyle-plugin &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
<!--                <version>${maven-checkstyle-plugin.version}</version>-->
<!--                <configuration>-->
<!--                    <configLocation>${code-styles.dir}/styles.xml</configLocation>-->
<!--                    <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--        </plugins>-->
    </reporting>

</project>
